Added apartment domira

--- a/app/apartment_domira.html
+++ b/app/apartment_domira.html
@@ -69,77 +69,68 @@
 								</p>
 								<a href="#" class="button">Добавить в избранное</a>
 							</div>
-							<div class="statistics"></div>
-							<div class="model"></div>
+							<div class="statistics">
+								<p class="item_stat">
+									<span class="use">Общая площадь</span>
+									<span class="hr"></span>
+									<span class="area">55,57 м2</span>
+								</p>
+								<p class="item_stat">
+									<span class="use">Жилая площадь</span>
+									<span class="hr"></span>
+									<span class="area">21,20 м2</span>
+								</p>
+								<p class="item_stat">
+									<span class="use">Кухня</span>
+									<span class="hr"></span>
+									<span class="area">5,51 м2</span>
+								</p>
+								<p class="item_stat">
+									<span class="use">Прочая</span>
+									<span class="hr"></span>
+									<span class="area">17,12 м2</span>
+								</p>
+								<p class="item_stat">
+									<span class="use">Тип квартиры</span>
+									<span class="hr"></span>
+									<span class="area">Трансформер</span>
+								</p>
+							</div>
+							<div class="model">
+								<a href="#"><img src="img/2-layersarea.png" alt=""></a>
+								<div class="number_of">
+									<p class="flat">
+										<span class="remaining">Скидка:</span>
+										<span class="number_of_flat">5%</span>
+									</p>
+								<a href="#" class="button">Связаться с нами</a>
+							</div>
+							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 
-			<div class="grid_items">
+			<div class="secondary_content_apartment">
 				<div class="row">
-					<div class="col-md-4">
+					<div class="col-md-7">
 						<div class="item">
-							<div class="item_content_wrapper">
-								<div class="box">
-									<div class="box__in">
-										<a class="" href="#">Щиро вітаємо Вас з Великоднем!</a>
-									</div>
-								</div>
-								<div class="box box2">
-									<div class="box__in">
-										<p>Щиро вітаємо Вас з Великоднем! Бажаємо Вам радості, здоров’я, добробуту і благополуччя. Христос Воскрес!</p>
-									</div>
-								</div>
-								<span>03 марта 2017</span>
-								<a href="#" class="button">Подробнее</a>
+							<div class="page-title">
+								<h4>Описание</h4>
+							</div>
+							<div class="page_text_content">
+								<p>ЖК«7'Я» в Счастливом – уникальный архитектурный стиль, функциональные планировочные решения квартир, закрытая внутренняя территория комплекса, озеленения преддомовой территории, детская и спортивная площадка, места для парковки автомобилей.</p>
+								<p>Напротив ЖК «7Я» находится садик; в 5 минутах от комплекса - школа. Рядом гипермаркет Фоззи и супермаркет Фора. В Счастливом расположена мощная детская спортивная и футбольная база. Поселок очень компактный – чрезвычайно выигрышное сочетание размеренного ритма жизни и близости к мегаполису.</p>
+								<p>В Счастливом есть все для семейного счастья!</p>
 							</div>
 						</div>
 					</div>
-  				<div class="col-md-4">
+  				<div class="col-md-5">
   					<div class="item">
-							<div class="item_content_wrapper">
-								<div class="box">
-									<div class="box__in">
-										<a class="" href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет</a>
-									</div>
-								</div>
-								<div class="box box2">
-									<div class="box__in">
-										<p>Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора» </p>
-									</div>
-								</div>
-								<span>02 марта 2017</span>
-								<a href="#" class="button">Подробнее</a>
-							</div>
-						</div>
-  				</div>
-  				<div class="col-md-4">
-  					<div class="item">
-							<div class="item_content_wrapper">
-							<div class="box">
-								<div class="box__in">
-									<a class="" href="#">Компания Domira Development поздравляет всех прекрасных дам с праздником весны</a>
-								</div>
-							</div>
-							<div class="box box2">
-								<div class="box__in">
-									<p>Общеизвестным фактом стало то, что каждому участнику антитеррористической операции на востоке Украины Президент обещал обеспечение жильём или земельными участками.</p>
-								</div>
-							</div>
-								<span>02 марта 2017</span>
-								<a href="#" class="button">Подробнее</a>
-							</div>
+							<iframe width="455" height="299" src="https://www.youtube.com/embed/r0Kq2zCxojE" frameborder="0" allowfullscreen></iframe>
 						</div>
   				</div>
 				</div>
-										<div class="text_content_apartment">
-							<div class="page_text_content">
-								<p>
-									Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора» площадь 687 кв.м. В супермаркете можно найти большой выбор свежей выпечки собственного производства (функционирует пекарня полного цикла). Также есть широкий ассортимент мяса, увеличен выбор сыров, колбас, рыбной продукции и других категорий товаров. Так же функционирует пиццерия. Магазин прекрасно подойдет для недельной семейной закупки.
-								</p>
-							</div>
-						</div>
 			</div>
 		</div>
 	</main>
