Alex made some changes

--- a/app/index.html
+++ b/app/index.html
@@ -92,8 +92,12 @@
 							<img src="img/news-img.png" alt="">
 						</td>
 						<td class="content">
-							<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
-							<div class="date">28 марта 2017</div>
+							<div class="news-and-sales-content">
+								<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
+							</div>
+							<div class="date-block-wrapper">
+								<span>02 марта 2017</span>
+							</div>
 						</td>
 					</tr>
 
@@ -102,8 +106,12 @@
 							<img src="img/news-img.png" alt="">
 						</td>
 						<td class="content">
-							<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
-							<div class="date">28 марта 2017</div>
+							<div class="news-and-sales-content">
+								<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
+							</div>
+							<div class="date-block-wrapper">
+								<span>02 марта 2017</span>
+							</div>
 						</td>
 					</tr>
 
@@ -112,8 +120,12 @@
 							<img src="img/news-img.png" alt="">
 						</td>
 						<td class="content">
-							<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
-							<div class="date">28 марта 2017</div>
+							<div class="news-and-sales-content">
+								<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
+							</div>
+							<div class="date-block-wrapper">
+								<span>02 марта 2017</span>
+							</div>
 						</td>
 					</tr>
 
@@ -122,8 +134,12 @@
 							<img src="img/news-img.png" alt="">
 						</td>
 						<td class="content">
-							<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
-							<div class="date">28 марта 2017</div>
+							<div class="news-and-sales-content">
+								<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
+							</div>
+							<div class="date-block-wrapper">
+								<span>02 марта 2017</span>
+							</div>
 						</td>
 					</tr>
 				</table>
@@ -172,7 +188,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="main-bottom-map-wrapper">
 		<div class="main-bottom-map" id="bottom_map"></div>
 		<div class="main-bottom-map-info-block">
