--- a/app/news_domira.html
+++ b/app/news_domira.html
@@ -57,7 +57,9 @@
 										<p>Щиро вітаємо Вас з Великоднем! Бажаємо Вам радості, здоров’я, добробуту і благополуччя. Христос Воскрес!</p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<div class="date-block-wrapper">
+									<span>02 марта 2017</span>
+								</div>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -78,7 +80,9 @@
 										<p>Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора»</p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<div class="date-block-wrapper">
+									<span>02 марта 2017</span>
+								</div>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -99,7 +103,9 @@
 										<p>Общеизвестным фактом стало то, что каждому участнику антитеррористической операции на востоке Украины Президент обещал обеспечение жильём или земельными участками.</p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<div class="date-block-wrapper">
+									<span>02 марта 2017</span>
+								</div>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -120,7 +126,9 @@
 										<p>Щиро вітаємо Вас з Великоднем! Бажаємо Вам радості, здоров’я, добробуту і благополуччя. Христос Воскрес!</p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<div class="date-block-wrapper">
+									<span>02 марта 2017</span>
+								</div>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -141,7 +149,9 @@
 										<p>Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора»</p>
 									</div>
 								</div>
-								<span>02 марта 2017</span>
+								<div class="date-block-wrapper">
+									<span>02 марта 2017</span>
+								</div>
 								<a href="#" class="button">Подробнее</a>
 							</div>
 						</div>
@@ -171,7 +181,7 @@
 			</div>
 		</div>
 	</main>
-	
+
 	<footer>
 		<span>© 2016, Domira Development</span>
 	</footer>
