Final version of DomiraTV

--- a/app/domiraTV.html
+++ b/app/domiraTV.html
@@ -4,11 +4,32 @@
     <meta charset="UTF-8">
     <title>Domira TV</title>
     <link rel="stylesheet" href="css/style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
 
 </head>
 <body>
+  <header>
+    <a href="#"><img src="img/logo.png" alt="Domira_logo"></a>
+    <ul>
+      <li><a href="#">Главная</a></li>
+      <li><a href="#">О компании</a></li>
+      <li><a href="#">Новости</a></li>
+      <li><a href="#">Добрые дела</a></li>
+      <li class="drop"><a href="#">Domira Club</a>
+      <ul class="hidden">
+        <li><a href="#">Lorem</a></li>
+        <li><a href="#">Lorem</a></li>
+        <li><a href="#">Lorem</a></li>
+      </ul>
+      </li>
+      <li><a href="#">Работа</a></li>
+      <li><a href="#">Контакты</a></li>
+      <li class="blue_item video-camera"><a href="#">Domira TV</a></li>
+      <li class="blue_item star"><a href="#">Избранное</a></li>
+    </ul>
+  </header>
 <div class="container">
 
 <div class="breadcrumbs">
@@ -58,7 +79,7 @@
                         <img class="thumbnail" id="thumbnail2" >
                     </div>
                     <a class="start-video" data-id="mov2" href="javascript:void callPlayer(&quot;player2&quot;,&quot;playVideo&quot;)">
-                        <img class="start-video-play" src="images/play-btn.png">
+                        <img class="start-video-play" src="img/play-btn.png">
                     </a>
                     <div class="movie-media-control">
                         <a class="movie-media-control-pause" href="javascript:void callPlayer(&quot;player2&quot;,&quot;pauseVideo&quot;)"></a>
@@ -81,7 +102,7 @@
                         <img class="thumbnail" id="thumbnail3" >
                     </div>
                     <a class="start-video" data-id="mov3" href="javascript:void callPlayer(&quot;player3&quot;,&quot;playVideo&quot;)">
-                        <img class="start-video-play" src="images/play-btn.png">
+                        <img class="start-video-play" src="img/play-btn.png">
                     </a>
                     <div class="movie-media-control">
                         <a class="movie-media-control-pause" href="javascript:void callPlayer(&quot;player3&quot;,&quot;pauseVideo&quot;)"></a>
@@ -103,7 +124,7 @@
                         <img class="thumbnail" id="thumbnail4" >
                     </div>
                     <a class="start-video" data-id="mov4" href="javascript:void callPlayer(&quot;player4&quot;,&quot;playVideo&quot;)">
-                        <img class="start-video-play" src="images/play-btn.png">
+                        <img class="start-video-play" src="img/play-btn.png">
                     </a>
                     <div class="movie-media-control">
                         <a class="movie-media-control-pause" href="javascript:void callPlayer(&quot;player4&quot;,&quot;pauseVideo&quot;)"></a>
@@ -126,7 +147,7 @@
                         <img class="thumbnail" id="thumbnail5" >
                     </div>
                     <a class="start-video" data-id="mov5" href="javascript:void callPlayer(&quot;player5&quot;,&quot;playVideo&quot;)">
-                        <img class="start-video-play" src="images/play-btn.png">
+                        <img class="start-video-play" src="img/play-btn.png">
                     </a>
                     <div class="movie-media-control">
                         <a class="movie-media-control-pause" href="javascript:void callPlayer(&quot;player5&quot;,&quot;pauseVideo&quot;)"></a>
@@ -148,7 +169,7 @@
                         <img class="thumbnail" id="thumbnail6" >
                     </div>
                     <a class="start-video" data-id="mov6" href="javascript:void callPlayer(&quot;player6&quot;,&quot;playVideo&quot;)">
-                        <img class="start-video-play" src="images/play-btn.png">
+                        <img class="start-video-play" src="img/play-btn.png">
                     </a>
                     <div class="movie-media-control">
                         <a class="movie-media-control-pause" href="javascript:void callPlayer(&quot;player6&quot;,&quot;pauseVideo&quot;)"></a>
@@ -165,7 +186,9 @@
     </div>
 </div>
 
-
+<footer>
+  <span>© 2016, Domira Development</span>
+</footer>
 
 <script
         src="https://code.jquery.com/jquery-3.2.1.min.js"
