Add planning tabulation

--- a/app/index.html
+++ b/app/index.html
@@ -33,15 +33,26 @@
 					<div class="page-title">
 						<h3>топ 5 планировок</h3>
 					</div>
-					<ul>
-						<li><a href="#">1 комнатная квартира</a></li>
+					<ul class="planing-title">
+						<li class="active_li"><a href="#" >1 комнатная квартира</a></li>
 						<li><a href="#">2-х комнатная</a></li>
 						<li><a href="#">3-х комнатная</a></li>
 						<li><a href="#">Двухуровневая квартира</a></li>
 					</ul>
-					<a href="#" class="layout_img">
-						<img src="img/2-54-70.png" alt="">
-					</a>
+					<div class="planing-content">
+						<a href="#" class="layout_img">
+							<img src="img/2-54-70.png" alt="">
+						</a>
+						<a href="#" class="layout_img">
+							<img src="img/plan24.png" alt="">
+						</a>
+						<a href="#" class="layout_img">
+							<img src="img/2-54-70.png" alt="">
+						</a>
+						<a href="#" class="layout_img">
+							<img src="img/plan24.png" alt="">
+						</a>
+					</div>
 					<a href="#" class="button">Подробнее</a>
 				</div>
 			</div>
