Add apartment_domira tabulation planning

--- a/app/apartment_domira.html
+++ b/app/apartment_domira.html
@@ -46,8 +46,12 @@
 				<div class="row">
 					<div class="col-md-7">
 						<div class="img_content_apartment">
-    					<img src="img/plan23.png" alt="img content apartment" class="main_img">
-    					<ul>
+							<div class="planing-content">
+    						<a href="#"><img src="img/plan23.png" alt="img content apartment" class="main_img"></a>
+    						<a href="#"><img src="img/plan25.png" alt="img content apartment" class="main_img"></a>
+    						<a href="#"><img src="img/plan26.png" alt="img content apartment" class="main_img"></a>
+    					</div>
+    					<ul class="planing-title">
     						<li>
     							<a href="#"><img src="img/25.png" alt=""></a>
     						</li>
