Mobile version about_domira.html

--- a/app/about_domira.html
+++ b/app/about_domira.html
@@ -75,11 +75,13 @@
 						</div>
 					</div>
 				</div>
+				<!-- Mobile img -->
+				<div class="main_mobile_content_img"></div>
 			</div>
 		</div>
 		<div class="main_content_img"></div>
 	</main>
-	
+
 	<footer>
 		<span>© 2016, Domira Development</span>
 	</footer>
