--- a/app/favorites_domira.html
+++ b/app/favorites_domira.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/bootstrap.css">
@@ -147,7 +148,7 @@
 			</div>
 		</div>
 	</main>
-	
+
 	<footer>
 		<span>© 2016, Domira Development</span>
 	</footer>
