--- a/app/index.html
+++ b/app/index.html
@@ -3,10 +3,18 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-	<header>
+	 <header>
+		<!-- BURGERSSS -->
+		<div class="swipe-area">
+			<div class="bar-wrapper">
+				<div class="nav-icon"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+			</div>
+		</div>
+			<!-- END BURGERSSS -->
 		<a href="#"><img src="img/logo.png" alt="Domira_logo"></a>
 		<ul>
 			<li><a href="#">Главная</a></li>
@@ -172,7 +180,7 @@
 			</div>
 		</div>
 	</div>
-	
+
 	<div class="main-bottom-map-wrapper">
 		<div class="main-bottom-map" id="bottom_map"></div>
 		<div class="main-bottom-map-info-block">
