Demo burger animation

--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,11 @@
 		<!-- BURGERSSS -->
 		<div class="swipe-area">
 			<div class="bar-wrapper">
-				<div class="nav-icon"><span></span><span></span><span></span><span></span><span></span><span></span></div>
+				<div class="nav-icon">
+					<span></span>
+					<span></span>
+					<span></span>
+				</div>
 			</div>
 		</div>
 			<!-- END BURGERSSS -->
