Add mobile menu 0.1v

--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,15 @@
 			</div>
 		</div>
 			<!-- END BURGERSSS -->
+			<!-- MOBILE HEADER -->
+			<div class="mobile-head-wrapper">
+				<a href="#"><img src="img/logo.png" alt="Domira_logo"></a>
+				<ul>
+					<li class="blue_item video-camera"><a href="#">Domira TV</a></li>
+					<li class="blue_item star"><a href="#">Избранное</a></li>
+				</ul>
+			</div>
+			<!-- END MOBILE HEADER -->
 		<a href="#"><img src="img/logo.png" alt="Domira_logo"></a>
 		<ul>
 			<li><a href="#">Главная</a></li>
