Pre-final mobile sidebar

--- a/app/index.html
+++ b/app/index.html
@@ -9,11 +9,27 @@
 
 </head>
 <body>
+		<!-- OVERLAY -->
+		<div class="overlay"></div>
+		<!--END OVERLAY -->
+
 		<!-- MOBILE HEADER -->
 		<div class="mobile-head-wrapper">
 			<a href="#"><img src="img/logo.png" alt="Domira_logo"></a>
 			<ul>
-
+				<li><a href="#">Главная</a></li>
+				<li><a href="#">О компании</a></li>
+				<li><a href="#">Новости</a></li>
+				<li><a href="#">Добрые дела</a></li>
+				<li class="drop"><a href="#">Domira Club</a>
+				<ul class="hidden">
+					<li><a href="#">Lorem</a></li>
+					<li><a href="#">Lorem</a></li>
+					<li><a href="#">Lorem</a></li>
+				</ul>
+				</li>
+				<li><a href="#">Работа</a></li>
+				<li><a href="#">Контакты</a></li>
 				<li class="blue_item video-camera"><a href="#">Domira TV</a></li>
 				<li class="blue_item star"><a href="#">Избранное</a></li>
 			</ul>
@@ -53,7 +69,7 @@
 	</header>
 
 
-	<main id="main">
+	<!-- <main id="main">
 	<div class="top-main-block">
 		<div class="banner-container">
 			<div class="banner-container-half">
@@ -232,7 +248,7 @@
 		</div>
 	</div>
 	</main>
-
+ -->
 
 	<!-- SWIPE -->
 	<script
