--- a/app/index.html
+++ b/app/index.html
@@ -69,7 +69,7 @@
 	</header>
 
 
-	<!-- <main id="main">
+	<main id="main">
 	<div class="top-main-block">
 		<div class="banner-container">
 			<div class="banner-container-half">
@@ -248,7 +248,7 @@
 		</div>
 	</div>
 	</main>
- -->
+
 
 	<!-- SWIPE -->
 	<script
