main page changes

--- a/app/index.html
+++ b/app/index.html
@@ -3,50 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<meta name="viewport" content="width=1200">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/libs.min.css">
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-		<!-- OVERLAY -->
-		<div class="overlay"></div>
-		<!--END OVERLAY -->
-
-		<!-- MOBILE HEADER -->
-		<div class="mobile-head-wrapper">
-			<a href="#"><img src="img/logo.png" alt="Domira_logo"></a>
-			<ul>
-				<li><a href="#">Главная</a></li>
-				<li><a href="#">О компании</a></li>
-				<li><a href="#">Новости</a></li>
-				<li><a href="#">Добрые дела</a></li>
-				<li class="drop"><a href="#">Domira Club</a>
-				<ul class="hidden">
-					<li><a href="#">Lorem</a></li>
-					<li><a href="#">Lorem</a></li>
-					<li><a href="#">Lorem</a></li>
-				</ul>
-				</li>
-				<li><a href="#">Работа</a></li>
-				<li><a href="#">Контакты</a></li>
-				<li class="blue_item video-camera"><a href="#">Domira TV</a></li>
-				<li class="blue_item star"><a href="#">Избранное</a></li>
-			</ul>
-		</div>
-		<!-- END MOBILE HEADER -->
 	 <header>
-		<!-- BURGERSSS -->
-		<div class="swipe-area">
-			<div class="bar-wrapper">
-				<div class="nav-icon">
-					<span></span>
-					<span></span>
-					<span></span>
-				</div>
-			</div>
-		</div>
-			<!-- END BURGERSSS -->
-
 		<a href="#"><img src="img/logo.png" alt="Domira_logo"></a>
 		<ul>
 			<li><a href="#">Главная</a></li>
@@ -54,17 +16,21 @@
 			<li><a href="#">Новости</a></li>
 			<li><a href="#">Добрые дела</a></li>
 			<li class="drop"><a href="#">Domira Club</a>
-			<ul class="hidden">
-				<li><a href="#">Lorem</a></li>
-				<li><a href="#">Lorem</a></li>
-				<li><a href="#">Lorem</a></li>
-			</ul>
+				<ul class="hidden">
+					<li><a href="#">Lorem</a></li>
+					<li><a href="#">Lorem</a></li>
+					<li><a href="#">Lorem</a></li>
+				</ul>
 			</li>
 			<li><a href="#">Работа</a></li>
 			<li><a href="#">Контакты</a></li>
 			<li class="blue_item video-camera"><a href="#">Domira TV</a></li>
 			<li class="blue_item star"><a href="#">Избранное</a></li>
 		</ul>
+
+		<div class="burger-mobile">
+			<div class="lines"></div>
+		</div>
 	</header>
 
 
@@ -258,7 +224,8 @@
 			</div>
 		</div>
 	</div>
-	<div class="wrapper">
+
+	<div class="wrapper top5-planing">
 		<div class="container">
 			<div class="layout">
 				<div class="page-title">
