finish main page

--- a/app/index.html
+++ b/app/index.html
@@ -54,7 +54,7 @@
 								<div class="jk-list-item-text">
 									Квартира в пригороде это идеальное место, где можно отдохнуть от городской суеты и востановить силы.
 									<br>
-									<a href="#">Прейти</a>
+									<a href="#">Перейти</a>
 								</div>
 							</div>
 							<img src="img/jk1.jpg" alt="Жилой комплекс">
@@ -69,7 +69,7 @@
 								<div class="jk-list-item-text">
 									Квартира в пригороде это идеальное место, где можно отдохнуть от городской суеты и востановить силы.
 									<br>
-									<a href="#">Прейти</a>
+									<a href="#">Перейти</a>
 								</div>
 							</div>
 							<img src="img/jk2.jpg" alt="Жилой комплекс">
@@ -84,7 +84,7 @@
 								<div class="jk-list-item-text">
 									Квартира в пригороде это идеальное место, где можно отдохнуть от городской суеты и востановить силы.
 									<br>
-									<a href="#">Прейти</a>
+									<a href="#">Перейти</a>
 								</div>
 							</div>
 							<img src="img/jk3.jpg" alt="Жилой комплекс">
@@ -99,7 +99,7 @@
 								<div class="jk-list-item-text">
 									Квартира в пригороде это идеальное место, где можно отдохнуть от городской суеты и востановить силы.
 									<br>
-									<a href="#">Прейти</a>
+									<a href="#">Перейти</a>
 								</div>
 							</div>
 							<img src="img/jk1.jpg" alt="Жилой комплекс">
@@ -114,7 +114,7 @@
 								<div class="jk-list-item-text">
 									Квартира в пригороде это идеальное место, где можно отдохнуть от городской суеты и востановить силы.
 									<br>
-									<a href="#">Прейти</a>
+									<a href="#">Перейти</a>
 								</div>
 							</div>
 							<img src="img/jk2.jpg" alt="Жилой комплекс">
@@ -129,7 +129,7 @@
 								<div class="jk-list-item-text">
 									Квартира в пригороде это идеальное место, где можно отдохнуть от городской суеты и востановить силы.
 									<br>
-									<a href="#">Прейти</a>
+									<a href="#">Перейти</a>
 								</div>
 							</div>
 							<img src="img/jk3.jpg" alt="Жилой комплекс">
@@ -147,13 +147,13 @@
 
 	<div class="news-and-sales">
 		<div class="container">
-			<div class="col-50">
+			<div class="col-50 news">
 				<h3>Наши новости</h3>
 				<a href="#all-news" class="all-news">Все новости</a>
 				<table>
 					<tr class="news-item">
 						<td class="image">
-							<img src="img/news-img.png" alt="">
+							<img src="img/G64A7458.JPG" alt="">
 						</td>
 						<td class="content">
 							<a href="#">В с.Счастливое открылся крупнейший в Киевской области супермаркет «Фора» площадью 687 кв.м.</a>
@@ -252,6 +252,17 @@
 					</a>
 				</div>
 				<a href="#" class="button">Подробнее</a>
+			</div>
+		</div>
+	</div>
+
+	<div class="image-block">
+		<div class="background-pic" style="background-image: url(img/G64A7458.JPG);"></div>
+		<div class="image-block__text">
+			<div class="content-wrapper">
+				<h2>Имиджевый блок</h2>
+				<p>никальный архитектурный стиль, функциональные планировочные решения квартир, закрытая внутренняя территория комплекса, озеленения преддомовой территории, детская и спортивная площадка, места для парковки автомобилей.</p>
+				<p>Напротив ЖК «7Я» находится садик; в 5 минутах от комплекса – школа. В Счастливом есть все для семейного счастья! Уникальный архитектурный стиль, функциональные планировочные решения квартир, закрытая внутренняя территория комплекса, озеленения преддомовой территории, детская и спортивная площадка, места для парковки автомобилей.</p>
 			</div>
 		</div>
 	</div>
