bugs on main page

--- a/app/index.html
+++ b/app/index.html
@@ -202,13 +202,13 @@
 					<div class="slide">
 						<div class="sales-item">
 							<img src="img/sales-img.png" alt="">
-							<h5>3 Очередь - Скидки на Квартиры до 95 000 грн.</h5>
+							<h5><a href="">3 Очередь - Скидки на Квартиры до 95 000 грн.</a></h5>
 							<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 						</div>
 
 						<div class="sales-item">
 							<img src="img/sales-img.png" alt="">
-							<h5>3 Очередь - Скидки на Квартиры до 95 000 грн.</h5>
+							<h5><a href="">3 Очередь - Скидки на Квартиры до 95 000 грн.</a></h5>
 							<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 						</div>
 					</div>
@@ -216,7 +216,7 @@
 					<div class="slide">
 						<div class="sales-item">
 							<img src="img/sales-img.png" alt="">
-							<h5>3 Очередь - Скидки на Квартиры до 95 000 грн.</h5>
+							<h5><a href="">3 Очередь - Скидки на Квартиры до 95 000 грн.</a></h5>
 							<p>Подробности уточняйте в отделе продаж комплекса (067) 411-11-99 </p>
 						</div>
 					</div>
@@ -238,16 +238,16 @@
 					<li><a href="#">Двухуровневая квартира</a></li>
 				</ul>
 				<div class="planing-content">
-					<a href="#" class="layout_img">
+					<a href="#1" class="layout_img">
 						<img src="img/2-54-70.png" alt="">
 					</a>
-					<a href="#" class="layout_img">
+					<a href="#2" class="layout_img">
 						<img src="img/plan24.png" alt="">
 					</a>
-					<a href="#" class="layout_img">
+					<a href="#3" class="layout_img">
 						<img src="img/2-54-70.png" alt="">
 					</a>
-					<a href="#" class="layout_img">
+					<a href="#4" class="layout_img">
 						<img src="img/plan24.png" alt="">
 					</a>
 				</div>
@@ -268,7 +268,6 @@
 	</div>
 
 	<div class="main-bottom-map-wrapper">
-		<div class="main-bottom-map" id="bottom_map"></div>
 		<div class="main-bottom-map-info-block">
 			<div class="main-bottom-map-info-block-title">
 				<h2>Контакты</h2>
@@ -296,7 +295,8 @@
 					</li>
 				</ul>
 			</div>
-		</div>
+		</div>		
+		<div class="main-bottom-map" id="bottom_map"></div>
 	</div>
 	</main>
 
