--- a/app/news_details_domira.html
+++ b/app/news_details_domira.html
@@ -40,7 +40,12 @@
 
 			<div class="main_content_details">
 				<div class="row">
-					<div class="col-md-6">
+					<div class="col-md-6 col-md-push-6">
+						<div class="img_content_details">
+    					<img src="img/516.png" alt="img content details">
+						</div>
+					</div>
+					<div class="col-md-6 col-md-pull-6">
 						<div class="text_content_details">
 							<div class="page-title">
     						<h1>В с.Счастливое открылся крупнейший в Киевской области супермарк</h1>
@@ -51,11 +56,6 @@
 									Теперь для жителей Счастливого, а в частности ЖК "7Я", функционирует крупнейший в Киевской области магазин сети «Фора» площадь 687 кв.м. В супермаркете можно найти большой выбор свежей выпечки собственного производства (функционирует пекарня полного цикла). Также есть широкий ассортимент мяса, увеличен выбор сыров, колбас, рыбной продукции и других категорий товаров. Так же функционирует пиццерия. Магазин прекрасно подойдет для недельной семейной закупки.
 								</p>
 							</div>
-						</div>
-					</div>
-					<div class="col-md-6">
-						<div class="img_content_details">
-    					<img src="img/516.png" alt="img content details">
 						</div>
 					</div>
 				</div>
