--- a/app/apartment_domira.html
+++ b/app/apartment_domira.html
@@ -130,7 +130,7 @@
 						</div>
 					</div>
   				<div class="col-md-5">
-  					<div class="item">
+  					<div class="item-video">
 							<iframe width="455" height="299" src="https://www.youtube.com/embed/r0Kq2zCxojE" frameborder="0" allowfullscreen></iframe>
 						</div>
   				</div>
