data for bottom map

--- a/app/index.html
+++ b/app/index.html
@@ -296,7 +296,10 @@
 				</ul>
 			</div>
 		</div>		
-		<div class="main-bottom-map" id="bottom_map"></div>
+		<div class="main-bottom-map" id="bottom_map" 
+		data-mainofice-phones="['+7 (495) 111-11-11', '+7 (495) 111-11-11']" 
+		data-sales1-phones="['+7 (495) 222-22-22', '+7 (495) 222-22-22']"
+		data-sales2-phones="['+7 (495) 333-33-33', '+7 (495) 333-33-33']"></div>
 	</div>
 	</main>
 
