--- a/app/index.html
+++ b/app/index.html
@@ -273,14 +273,13 @@
 				<h2>Контакты</h2>
 			</div>
 			<div class="main-bottom-map-info-block-content">
-				<h3>Отдел продаж компании:</h3>
-				<div class="main-bottom-map-info-block-content-number"><span>+7 (495) 123-32-23</span></div>
-				<div class="main-bottom-map-info-block-content-number"><span>+7 (495) 321-12-21</span></div>
-			</div>
-			<div class="main-bottom-map-info-block-content">
-				<h3>О компании:</h3>
-				<div class="main-bottom-map-info-block-content-number"><span>+7 (495) 123-32-23</span></div>
+				<h3>По общим вопросам:</h3>
 				<div class="main-bottom-map-info-block-content-email"><span>info@domira.com.ua</span></div>
+				<h3>Отдел снабжения:</h3>
+				<div class="main-bottom-map-info-block-content-number"><span>+380 (096) 191-52-51</span></div>
+				<div class="main-bottom-map-info-block-content-email"><span>sergeykoval2017@ukr.net</span></div>
+				<h3>Работа в компании:</h3>
+				<div class="main-bottom-map-info-block-content-email"><span>hr@domira.com.ua</span></div>
 			</div>
 			<div class="main-bottom-map-social-block">
 				<ul>
@@ -297,9 +296,36 @@
 			</div>
 		</div>		
 		<div class="main-bottom-map" id="bottom_map" 
-		data-mainofice-phones="['+7 (495) 111-11-11', '+7 (495) 111-11-11']" 
-		data-sales1-phones="['+7 (495) 222-22-22', '+7 (495) 222-22-22']"
-		data-sales2-phones="['+7 (495) 333-33-33', '+7 (495) 333-33-33']"></div>
+		data-main-ofice='[{
+				"name": "По общим вопросам",
+				"mail": ["info@domira.com.ua"]
+			},
+			{
+				"name": "Отдел снабжения",
+				"number": ["+380 (096) 191-52-51"],
+				"mail": ["sergeykoval2017@ukr.net"]
+			},
+			{
+				"name": "Работа в компании",
+				"mail": ["hr@domira.com.ua"]			
+			}
+		]'
+		data-jk7ya='[{
+				"name": "Консультация",
+				"number": ["+38 (067) 411-11-99"],
+				"text": ["по телефону (ежедневно) с 9:00 до 21:00", "в офисе (ежедневно) с 9:00 до 19:00"]
+			}
+		]'
+		data-jkmun='[{
+			"name": "Консультация",
+			"number": ["+38 (067) 411-11-00"],
+			"text": ["по телефону (ежедневно) с 9:00 до 21:00", "в офисе (ежедневно) с 9:00 до 19:00"]
+		}]'
+		data-jkdom='[{
+			"name": "Консультация",
+			"number": ["+38 (067) 411-11-00"],
+			"text": ["по телефону (ежедневно) с 9:00 до 21:00", "в офисе (ежедневно) с 9:00 до 19:00"]
+		}]'></div>
 	</div>
 	</main>
 
