--- a/app/index.html
+++ b/app/index.html
@@ -137,8 +137,8 @@
 					</div>
 
 					<div class="jk-list-nav">
-						<div class="jk-list-nav-item up"></div>
-						<div class="jk-list-nav-item down"></div>
+						<div class="jk-list-nav-item up"><div>∧</div></div>
+						<div class="jk-list-nav-item down"><div>∨</div></div>
 					</div>
 				</div>
 			</div>
